--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Deploy
         run: |
-          'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+          apt-get update -y && apt-get install openssh-client -y
           echo StrictHostKeyChecking no >> /etc/ssh/ssh_config
           eval $(ssh-agent -s)
           echo "${{ secrets.SSH_FMD_LAB }}" | tr -d '\r' | ssh-add -
