--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,8 +26,25 @@ jobs:
       - name: Run PHPStan
         run: ./vendor/bin/phpstan analyse app
 
-  deploy:
+  tests:
     needs: validation
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.4'
+          
+      - name: Install dependencies
+        run: composer install
+        
+      - name: Run PHPUnit
+        run: ./vendor/bin/phpunit
+
+  deploy:
+    needs: tests
     runs-on: ubuntu-latest
     container: convenia/php-full:latest
     if: github.ref == 'refs/heads/master'
