--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,10 @@ jobs:
           
       - name: Install dependencies
         run: composer install
-        
+
+      - name: Generate App Key
+        run: php artisan key:generate
+
       - name: Run PHPUnit
         run: ./vendor/bin/phpunit
 
