--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,6 @@ jobs:
         run: ./vendor/bin/phpstan analyse app
 
   tests:
-    needs: validation
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -48,7 +47,7 @@ jobs:
         run: ./vendor/bin/phpunit
 
   deploy:
-    needs: tests
+    needs: [validation, tests]
     runs-on: ubuntu-latest
     container: convenia/php-full:latest
     if: github.ref == 'refs/heads/master'
